--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>12 Sep 1998</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>12 Sep 1998</span></li> -->
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 816 059 2704</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Surat, Gujarat, India</span></li>
@@ -106,9 +107,8 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>MSc IT</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>ranav8279@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ranav8279@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -256,12 +256,12 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p></p>
+          <!-- <p></p> -->
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Vishal Rana</h4>
               <p><em>Self-motivated and solution-driven Software Developer with 1+ years of experience in developing Power BI solutions.</em></p>
@@ -274,32 +274,55 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Science Information and Communication Technology</h4>
+              <h4>Master of Science, Information and Communication Technology</h4>
               <h5>2019 - 2021</h5>
               <p><em>Dhirubhai Ambani Institute of Information and Communication Technology, Gandhinagar, GJ, IN</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <!-- <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p> -->
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>CPI:</strong> <span>7.97</span></li>
+                <li><strong>CPI:</strong> <span>7.97</span></li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Science Information and Communication Technology</h4>
+              <h4>Bachelor of Science, Information and Communication Technology</h4>
               <h5>2016 - 2019</h5>
               <p><em>Department of ICT, Veer Narmad South Gujarat University, Surat, GJ, IN</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
+              <ul>
+                <li><strong>CPI:</strong> <span>7.47</span></li>
+              </ul>
             </div>
+            <div class="resume-item">
+              <h4>12th Science</h4>
+              <h5>2014 - 2016</h5>
+              <p><em>T & T V Sarvajanik High School, Surat, GJ, IN<small> (Gujarat Secondary and Higher Secondary Education Board)</small></em></p>
+              <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
+              <ul>
+                <li><strong>Percentage:</strong> <span>81.84%</span></li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>10th</h4>
+              <h5>2012 - 2014</h5>
+              <p><em>Smt. RSM Poonawala Sarvajanik Experimental School, Surat, GJ, IN<small> (Gujarat Secondary and Higher Secondary Education Board)</small></em></p>
+              <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
+              <ul>
+                <li><strong>Percentage:</strong> <span>87.33%</span></li>
+              </ul>
+            </div>
+
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+         
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Software Engineer 1</h4>
               <h5>Jul, 2021 - Aug, 2022</h5>
               <p><em>MAQ Software, Hyderabad, IN </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Handled backend requests which involved analyzing data discrepancies, optimizing Power BI report load time, data model optimization, and creating optimized queries.</li>
+                <li>I oversaw code hygiene, as well as reviewed and approved PRs before pushing changes to UAT/PROD.</li>
+                <li>Delegated tasks, trained new joinees, and helped solving technical as well as domain related queries of team members.</li>
+                <li>Apart from facilitating day to day requests, I was able to handle P0 requests and deliver solutuions on time.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -307,13 +330,31 @@
               <h5>Jan, 2021 - Jun, 2021</h5>
               <p><em>MAQ Software, Hyderabad, IN</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>I mainly worked on Power BI and SQL Server. Initially, my responsibilities included adding visualizations into Power BI reports as per user requirements, fixing UI/UX issues, running test cases.</li>
+                <li>During the last part of my internship, I started getting my own user stories, which involved backend changes like adding or updating existing columns, updating existing metric definition, creating a new metric, or analyzing data discrepancies.</li>
               </ul>
             </div>
+            <h3 class="resume-title">Projects</h3>
+            <div class="resume-item">
+              <h4>Bookopia</h4>
+              <h5>Apr, 2019 - Jun, 2019</h5>
+              <p><em>BSc IT Final Semester Project </em></p>
+              <ul>
+                <li><strong>Technologies:</strong> <span>PhP using CodeIgniter, HTML, CSS, JQuery, mySQL</span></li>
+                <li>Bookopia is a platform which helps authors to develop a community of their own and book readers to be a part of this community. Moreover users can rate and review books which helps people choosing correct book.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>MSc IT Summer Internship Project</h4>
+              <h5>May 2020 - Jun 2020</h5>
+              <!-- <p><em>MAQ Software, Hyderabad, IN</em></p> -->
+              <ul>
+                <li><strong>Technologies:</strong> <span>Vue, JavaScript</span></li>
+                <li>This project was for the Summer Internship (2 months), that we have to do after second semester. I was working in a team of 4. Other 3 contributors are <a href="https://github.com/anishjain94" target="_blank">@anishjain94</a>, <a href="https://github.com/kapiltailor8266" target="_blank">@kapiltailor8266</a> ,and <a href="https://github.com/gerry1818" target="_blank">@gerry1818</a>. This was for learning vue.js and node.js and also single page application. The whole projects works like a single page application divided into components that can load dynamically. The project is about showing covid19 figures in india through visualisation, so it is was to track the growth/withering of covid19 cases in india. We have used external libraris for charts and tables(vue-chart.js and vue-table-dynamic).</li>
+              </ul>
+            </div>   
           </div>
+          
         </div>
 
       </div>
